changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Generate a list of special equipment in maps. Not yet listed in the map page itself.
 utils/mapper.c
Nicolas Weeger, 2008-02-22

Smarter pic generation for tiled maps. Fix crash if no map for quest.
 utils/mapper.c
Nicolas Weeger, 2008-02-16

Remove obsolete functions (related to weather).
 random_maps/standalone.c
 utils/bwp.c mapper.c
 test/unit/common/stubs_common.c
 test/unit/random_maps/stubs_random.c
 test/unit/socket/stubs_socket.c
Nicolas Weeger, 2008-02-17

Fix shifted pic for eg Titan.
 common/object.c: make get_multi_size() non static so can be used elsewhere.
 include/libproto.h
 utils/mapper.c
Nicolas Weeger, 2008-02-17

Remove ltostr10 and doubletostr10. They were using static buffer, and
are nicely replaced by stringbuffer_append_printf() or snprintf().
 common/loader.l object.c porting.c
 include/libproto.h
 server/time.c
 test/unit/common/check_loader.c
Nicolas Weeger, 2008-02-17

Unit test for get_ob_diff().
 test/unit/common/check_loader.c
 test/unit/common/Makefile.am
Nicolas Weeger, 2008-02-17

Tileset support, through '-tileset=' option. Default 'standard' tileset.
 utils/mapper.c
Nicolas Weeger, 2008-02-16

Remove left-over from weather code.
 common/map.c utils.c
 include/map.h plugin.h sproto.h
 plugins/cfpython/include/cfpython_map_private.h
 plugins/cfpython/cfpython_map.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/c_misc.c init.c plugins.c weather.c
Nicolas Weeger, 2008-02-16

Fix various warnings, remove unused variables/code.
 common/button.c languages.c
 server/attack.c c_misc.c spell_util.c