@@ -17,6 +17,7 @@ Map view:
 <br />
 #MAPLORE#
 #QUESTS#
+#MONSTERS#
 <br />
 <a href="#REGIONPATH#">#REGIONNAME#'s map index</a> | <a href="#REGIONINDEXPATH#">Region index</a> | <a href="#INDEXPATH#">Global map index</a> | <a href="#WORLDMAPPATH#">World map</a>
 </body>
